clang/test/BSC/Negative/Generic/Constant/Invalid_constant/Invalid_constant.cbs
// RUN: %clang_cc1 -verify %s

int foo_1<int N, int L>(int a) {
    int x = N;
    int y = L.f1;               // expected-error {{no member named 'f1' in type 'int'}}
    return x;
}

int foo_2<int B>(int a) {        // expected-note {{candidate template ignored: invalid explicitly-specified argument for template parameter 'B'}}
    int x = B;
    return x;
}

int foo_3<long int C>(int a) {   // expected-note {{candidate template ignored: invalid explicitly-specified argument for template parameter 'C'}}
    int x = C;
    return x;
}

float foo_4<float F>(int a) {   //  expected-error {{a non-type template parameter cannot have type 'float' before C++20}}
    float x = F;
    return x;
}

int main() {
    int a = foo_2<3.15>(2);     // expected-error {{no matching function for call to 'foo_2'}}

    float x = 1.5;
    int b = foo_3<x>(2);        // expected-error {{no matching function for call to 'foo_3'}}
    return 0;
}
